[gd_scene load_steps=20 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PlantingNotifier.gd" type="Script" id=2]
[ext_resource path="res://Assets/HUD/water icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/HUD/circle_slightly_smaller.png" type="Texture" id=4]
[ext_resource path="res://Assets/HUD/rect.png" type="Texture" id=5]
[ext_resource path="res://Assets/HUD/return.png" type="Texture" id=6]
[ext_resource path="res://Assets/HUD/merge.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 43
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 140, 82 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 140, 82 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 140, 82 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 140, 82 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 140, 82 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 140, 82 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 58, 60 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 58, 60 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 140, 82 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 140, 82 )

[node name="PlantingNotifier" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PlantingNotifierMessage" type="Label" parent="."]
margin_right = 186.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Water Tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Fire Tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EarthTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Earth Tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AirTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "AirTree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagmaTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Magma Tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnoopTree" type="Button" parent="."]
margin_right = 83.0
margin_bottom = 20.0
text = "Snoop Tree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CottonCandyTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LightningTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BunnyTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SandTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BubbleTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreeTree" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearPlots" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.305882, 0.305882, 0.305882, 1 )
text = "Clear Plots"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearSinglePlot" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.305882, 0.305882, 0.305882, 1 )
text = "Clear Single Plot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="."]
anchor_top = 0.00105509
anchor_bottom = 0.00105509
margin_left = 5.09827
margin_top = 3.30305
margin_right = 80.0983
margin_bottom = 67.3031
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water" type="Button" parent="."]
anchor_top = 0.00105512
anchor_bottom = 0.00105512
margin_left = -1.0
margin_top = 0.366928
margin_right = 78.0
margin_bottom = 74.3669
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitFarm" type="Button" parent="."]
margin_left = 4.34314
margin_top = 4.23611
margin_right = 69.3431
margin_bottom = 51.2361
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="WaterTree" to="." method="_on_WaterTree_pressed"]
[connection signal="pressed" from="FireTree" to="." method="_on_FireTree_pressed"]
[connection signal="pressed" from="EarthTree" to="." method="_on_EarthTree_pressed"]
[connection signal="pressed" from="AirTree" to="." method="_on_AirTree_pressed"]
[connection signal="pressed" from="MagmaTree" to="." method="_on_MagmaTree_pressed"]
[connection signal="pressed" from="SnoopTree" to="." method="_on_SnoopTree_pressed"]
[connection signal="pressed" from="CottonCandyTree" to="." method="_on_CottonCandyTree_pressed"]
[connection signal="pressed" from="LightningTree" to="." method="_on_LightningTree_pressed"]
[connection signal="pressed" from="BunnyTree" to="." method="_on_BunnyTree_pressed"]
[connection signal="pressed" from="SandTree" to="." method="_on_SandTree_pressed"]
[connection signal="pressed" from="BubbleTree" to="." method="_on_BubbleTree_pressed"]
[connection signal="pressed" from="TreeTree" to="." method="_on_TreeTree_pressed"]
[connection signal="pressed" from="ClearPlots" to="." method="_on_ClearPlots_pressed"]
[connection signal="pressed" from="ClearSinglePlot" to="." method="_on_ClearSinglePlot_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Water" to="." method="_on_Water_pressed"]
[connection signal="pressed" from="ExitFarm" to="." method="_on_ExitFarm_pressed"]
